# fastapi-project

./: .gitignore  README.md  config.py  frontend.html  frontend_ws.html  main.py  pyproject.toml  try.html
auth/: db.py  dependencies.py  router.py  utils.py
microwave/: router.py  schemas.py
websocket/: router.py  schemas.py
